--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,10 @@
 Django>=5.0
-psycopg2-binary
-django-htmx
-Pillow
+django-jazzmin>=2.6.0
+django-htmx>=1.17.0
+whitenoise>=6.6.0
+gunicorn>=21.2.0
+psycopg2-binary>=2.9.9
+python-dotenv>=1.0.0
+Pillow>=10.2.0
+dj-database-url>=2.1.0
+requests>=2.31.0
